external/The-Forge/Common_3/Resources/ResourceLoader/Interfaces/IResourceLoader.h

typedef struct MappedMemoryRange
{
    uint8_t* pData;
    Buffer*  pBuffer;
    uint64_t mOffset;
    uint64_t mSize;
    uint32_t mFlags;
} MappedMemoryRange;
typedef enum TextureContainerType
{
    /// Use whatever container is designed for that platform
    /// Windows, macOS, Linux - TEXTURE_CONTAINER_DDS
    /// iOS, Android          - TEXTURE_CONTAINER_KTX
    TEXTURE_CONTAINER_DEFAULT = 0,
    /// Explicit container types
    /// .dds
    TEXTURE_CONTAINER_DDS,
    /// .ktx
    TEXTURE_CONTAINER_KTX,
    /// .gnf
    TEXTURE_CONTAINER_GNF,
} TextureContainerType;
typedef enum RegisterMaterialResult
{

    REGISTER_MATERIAL_SUCCESS = 0x0000,
    REGISTER_MATERIAL_BADFILE = 0x0001,

} RegisterMaterialResult;
// MARK: - Resource Loading

typedef struct BufferLoadDesc
{
    Buffer**    ppBuffer;
    // This must stay valid until the buffer load is not completed
    // Use waitForToken (if a token was passed to addResource) or waitForAllResourceLoads before freeing pData
    const void* pData;
    BufferDesc  mDesc;
    /// MemZero buffer
    bool        mForceReset;

    // Optional (if user provides staging buffer memory)
    Buffer*  pSrcBuffer;
    uint64_t mSrcOffset;
} BufferLoadDesc;
typedef struct TextureLoadDesc
{
    Texture** ppTexture;
    union
    {
        /// Load empty texture
        struct
        {
            TextureDesc* pDesc;
            /// MemZero texture
            bool         mForceReset;
        };
        /// Ycbcr sampler to use when loading ycbcr texture from file
        Sampler* pYcbcrSampler;
    };
    /// Filename without extension. Extension will be determined based on mContainer
    const char*          pFileName;
#if defined(TIDES)
    const void* pTextureData;
    size_t mTextureDataSize;
#endif
    /// The index of the GPU in SLI/Cross-Fire that owns this texture, or the Renderer index in unlinked mode.
    uint32_t             mNodeIndex;
    /// Following is ignored if pDesc != NULL.  pDesc->mFlags will be considered instead.
    TextureCreationFlags mCreationFlag;
    /// The texture file format (dds/ktx/...)
    TextureContainerType mContainer;
} TextureLoadDesc;
typedef struct BufferChunk
{
    uint32_t mOffset;
    uint32_t mSize;
} BufferChunk;
// Structure used to sub-allocate chunks on a buffer, keeps track of free memory to handle new requests.
// Interface to add/remove this allocator is currently private, could be made public if needed.
typedef struct BufferChunkAllocator
{
    Buffer*      pBuffer;
    uint32_t     mUsedChunkCount;
    uint32_t     mSize;
    BufferChunk* mUnusedChunks;
} BufferChunkAllocator;
// Stores huge buffers that are then used to sub-allocate memory for each of the loaded meshes.
// GeometryBuffer can be provided to GeometryLoadDesc::pGeometryBuffer when loading a mesh, sub-chunks will be allocated
// by mIndex and mVertex allocators and return the BufferChunk(s) that where used in Geometry::mIndexBufferChunk and
// Geometry::mVertexBufferChunks
typedef struct GeometryBuffer
{
    BufferChunkAllocator mIndex;
    BufferChunkAllocator mVertex[MAX_VERTEX_BINDINGS];
} GeometryBuffer;
typedef struct Meshlet
{
    /// Offsets within meshlet_vertices and meshlet_triangles arrays with meshlet data
    uint vertexOffset;
    uint triangleOffset;

    /// Number of vertices and triangles used in the meshlet; data is stored in consecutive range defined by offset and count
    uint vertexCount;
    uint triangleCount;
} Meshlet;
typedef struct MeshletData
{
    float3 center;
    float  radius;

    /// Normal cone, useful for backface culling
    float3 coneApex;
    float3 coneAxis;
    float  coneCutoff; // = cos(angle/2)
} MeshletData;
typedef struct GeometryMeshlets
{
    uint64_t     mMeshletCount;
    Meshlet*     mMeshlets;
    MeshletData* mMeshletsData;

    uint64_t  mVertexCount;
    uint32_t* mVertices;

    uint64_t mTriangleCount;
    uint8_t* mTriangles;
} GeometryMeshlets;
typedef struct Geometry
{
    union
    {
        struct
        {
            /// Index buffer to bind when drawing this geometry
            Buffer* pIndexBuffer;
            /// The array of vertex buffers to bind when drawing this geometry
            Buffer* pVertexBuffers[MAX_VERTEX_BINDINGS];
        };
        struct
        {
            /// Used when Geometry is loaded to unified GeometryBuffer object (when GeometryLoadDesc::pGeometryBuffer is valid)
            BufferChunk mIndexBufferChunk;
            BufferChunk mVertexBufferChunks[MAX_VERTEX_BINDINGS];
        };
    };

    /// The array of traditional draw arguments to draw each subset in this geometry
    IndirectDrawIndexArguments* pDrawArgs;

    /// The array of vertex buffer strides to bind when drawing this geometry
    uint32_t mVertexStrides[MAX_VERTEX_BINDINGS];

    /// Number of vertex buffers in this geometry
    uint32_t mVertexBufferCount : 8;
    /// Index type (32 or 16 bit)
    uint32_t mIndexType : 2;
    /// Number of draw args in the geometry
    uint32_t mDrawArgCount : 22;
    /// Number of indices in the geometry
    uint32_t mIndexCount;
    /// Number of vertices in the geometry
    uint32_t mVertexCount;

    // If present, data is stored in pGeometryBuffer
    GeometryBuffer* pGeometryBuffer;

    GeometryMeshlets meshlets;

#if defined(TIDES)
    float mAabbMin[3];
    float mAabbMax[3];
    float mAabbCenter[3];
    float mRadius;
    uint32_t mPad[10];
#else
    uint32_t mPad[20];
#endif
} Geometry;
// Outputs data that's only needed in the CPU side, OTOH the Geometry object holds GPU related information and buffers
typedef struct GeometryData
{
    struct Hair
    {
        uint32_t mVertexCountPerStrand;
        uint32_t mGuideCountPerStrand;
    };

    struct ShadowData
    {
        void* pIndices;
        void* pAttributes[MAX_SEMANTICS];

        // Strides for the data in pAttributes, this might not match Geometry::mVertexStrides since those are generated based on
        // GeometryLoadDesc::pVertexLayout, e.g. if the normals are packed on the GPU as half2 then:
        //         - Geometry::mVertexStrides will be sizeof(half2)
        //         - ShadowData::mVertexStrides might be sizeof(float3) = 12 (or maybe sizeof(float4) = 16)
        // If the data readed from the file in pAttributes is already packed then ShadowData::mVertexStrides[i] ==
        // Geometry::mVertexStrides[i]
        uint32_t mVertexStrides[MAX_SEMANTICS];

        // We might have a different number of attributes than mVertexCount.
        // This happens for example for Hair
        uint32_t mAttributeCount[MAX_SEMANTICS];

        // TODO: Consider if we want to store here mIndexStride to access ShadowData::pIndices,
        //       right now it depends on the number of vertexes in the mesh (uint16_t if mVertexCount < 64k otherwise uint32_t)
    };

    /// Shadow copy of the geometry vertex and index data if requested through the load flags
    ShadowData* pShadow;

    /// The array of joint inverse bind-pose matrices ( object-space )
    mat4*     pInverseBindPoses;
    /// The array of data to remap skin batch local joint ids to global joint ids
    uint32_t* pJointRemaps;

    /// Number of joints in the skinned geometry
    uint32_t mJointCount;

    /// Hair data
    Hair mHair;

    uint32_t mPad0[1];

    MeshletData* meshlets;

    // Custom data imported by the user in custom AssetPipelines, this can be data that was exported from a custom tool/plugin
    // specific to the engine/game. See AssetPipeline: callbacks in ProcessGLTFParams for more information.
    void*    pUserData;
    uint32_t mUserDataSize;

    uint32_t mPad1[5];
} GeometryData;
typedef enum GeometryLoadFlags
{
    GEOMETRY_LOAD_FLAG_NONE = 0x0,
    /// Keep shadow copy of indices and vertices for CPU
    GEOMETRY_LOAD_FLAG_SHADOWED = 0x1,
    /// Use structured buffers instead of raw buffers
    GEOMETRY_LOAD_FLAG_STRUCTURED_BUFFERS = 0x2,
    /// Geometry buffers can be used as input for ray tracing
    GEOMETRY_LOAD_FLAG_RAYTRACING_INPUT = 0x4,
} GeometryLoadFlags;
typedef struct GeometryBufferLayoutDesc
{
    IndexType mIndexType;
    uint32_t  mVerticesStrides[MAX_VERTEX_BINDINGS];
    // Vertex buffer/binding idx for each semantic.
    // Used to locate attributes inside specific buffers for loaded Geometry.
    uint32_t  mSemanticBindings[SEMANTIC_TEXCOORD9 + 1];
} GeometryBufferLayoutDesc;
typedef struct GeometryLoadDesc
{
    /// Output geometry
    Geometry**     ppGeometry;
    GeometryData** ppGeometryData;

    /// Filename of geometry container
    const char*         pFileName;
    /// Loading flags
    GeometryLoadFlags   mFlags;
    /// Linked gpu node / Unlinked Renderer index
    uint32_t            mNodeIndex;
    /// Specifies how to arrange the vertex data loaded from the file into GPU memory
    const VertexLayout* pVertexLayout;

    /// Optional preallocated unified buffer for geometry.
    /// When this parameter is specified, Geometry::pDrawArgs values are going
    /// to be shifted according to index/vertex location within BufferChunkAllocator.
    GeometryBuffer* pGeometryBuffer;

    /// Used to convert data to desired state inside GeometryBuffer.
    GeometryBufferLayoutDesc* pGeometryBufferLayoutDesc;
} GeometryLoadDesc;
typedef uint64_t SyncToken;
/// Adding and updating resources can be done using a addResource or
/// beginUpdateResource/endUpdateResource pair.
/// if addResource(BufferLoadDesc) is called with a data size larger than the ResourceLoader's staging buffer, the ResourceLoader
/// will perform multiple copies/flushes rather than failing the copy.

/// If token is NULL, the resource will be available when allResourceLoadsCompleted() returns true.
/// If token is non NULL, the resource will be available after isTokenCompleted(token) returns true.
FORGE_RENDERER_API void addResource(BufferLoadDesc* pBufferDesc, SyncToken* token);
FORGE_RENDERER_API void addResource(TextureLoadDesc* pTextureDesc, SyncToken* token);
FORGE_RENDERER_API void addResource(GeometryLoadDesc* pGeomDesc, SyncToken* token);
/// Blocks the calling thread until allResourceLoadsCompleted() returns true.
/// Note that if more resource loads or updates are submitted from a different thread while
/// while the calling thread is blocked, those loads or updates are not guaranteed to have
/// completed when this function returns.
FORGE_RENDERER_API void waitForAllResourceLoads();
FORGE_RENDERER_API void      waitForToken(const SyncToken* token);