external/The-Forge/Common_3/Resources/ResourceLoader/Interfaces/IResourceLoader.zig

// auto generated by c2z
const std = @import("std");
//const cpp = @import("cpp");

// TIDES: BEGIN MANUAL CHANGES
const Graphics = @import("../../../Graphics/Interfaces/IGraphics.zig");

const PipelineCacheFlags = u32;
const QueueType = u32;
const ResourceState = u32;
const TextureCreationFlags = u32;
const float3 = [3]f32;
const uint = u32;

const Buffer = Graphics.Buffer;
const BufferDesc = Graphics.BufferDesc;
const Cmd = Graphics.Cmd;
const Fence = Graphics.Fence;
const IndexType = Graphics.IndexType;
const IndirectDrawIndexArguments = Graphics.IndirectDrawIndexArguments;
const mat4 = anyopaque;
const PipelineCache = Graphics.PipelineCache;
const Renderer = Graphics.Renderer;
const ResourcePlacement = Graphics.ResourcePlacement;
const ResourceSizeAlign = Graphics.ResourceSizeAlign;
const Sampler = Graphics.Sampler;
const Semaphore = Graphics.Semaphore;
const Shader = Graphics.Shader;
const ShaderConstant = Graphics.ShaderConstant;
const Texture = Graphics.Texture;
const TextureDesc = Graphics.TextureDesc;
const VertexLayout = Graphics.VertexLayout;
// TIDES: END MANUAL CHANGES

extern const _1_gVertexBufferState_: *const ResourceState;
pub const gVertexBufferState = _1_gVertexBufferState_;

extern const _1_gIndexBufferState_: *const ResourceState;
pub const gIndexBufferState = _1_gIndexBufferState_;

pub const MappedMemoryRange = extern struct {
    pData: [*c]u8,
    pBuffer: [*c]Buffer,
    mOffset: u64,
    mSize: u64,
    mFlags: u32,
};

pub const TextureContainerType = extern struct {
    bits: c_int = 0,

    /// Use whatever container is designed for that platform
    /// Windows, macOS, Linux - TEXTURE_CONTAINER_DDS
    /// iOS, Android          - TEXTURE_CONTAINER_KTX
    pub const TEXTURE_CONTAINER_DEFAULT: TextureContainerType = .{ .bits = @as(c_uint, @intCast(0)) };
    /// Explicit container types
    /// .dds
    pub const TEXTURE_CONTAINER_DDS: TextureContainerType = .{ .bits = TextureContainerType.TEXTURE_CONTAINER_DEFAULT.bits + 1 };
    /// .ktx
    pub const TEXTURE_CONTAINER_KTX: TextureContainerType = .{ .bits = TextureContainerType.TEXTURE_CONTAINER_DEFAULT.bits + 2 };
    /// .gnf
    pub const TEXTURE_CONTAINER_GNF: TextureContainerType = .{ .bits = TextureContainerType.TEXTURE_CONTAINER_DEFAULT.bits + 3 };

    // pub usingnamespace cpp.FlagsMixin(TextureContainerType);
};

pub const RegisterMaterialResult = extern struct {
    bits: c_int = 0,

    pub const REGISTER_MATERIAL_SUCCESS: RegisterMaterialResult = .{ .bits = @as(c_uint, @intCast(0)) };
    pub const REGISTER_MATERIAL_BADFILE: RegisterMaterialResult = .{ .bits = @as(c_uint, @intCast(1)) };

    // pub usingnamespace cpp.FlagsMixin(RegisterMaterialResult);
};

/// MARK: - Resource Loading
pub const BufferLoadDesc = extern struct {
    ppBuffer: [*c][*c]Buffer,
    /// This must stay valid until the buffer load is not completed
    /// Use waitForToken (if a token was passed to addResource) or waitForAllResourceLoads before freeing pData
    pData: ?*const anyopaque,
    mDesc: BufferDesc,
    /// MemZero buffer
    mForceReset: bool,
    /// Optional (if user provides staging buffer memory)
    pSrcBuffer: [*c]Buffer,
    mSrcOffset: u64,
};

/// MARK: - Resource Loading
pub const TextureLoadDesc = extern struct {
    ppTexture: [*c][*c]Texture,
    __union_field1: __Union0,
    /// Filename without extension. Extension will be determined based on mContainer
    pFileName: [*c]const u8,
    pTextureData: ?*const anyopaque,
    mTextureDataSize: usize,
    /// The index of the GPU in SLI/Cross-Fire that owns this texture, or the Renderer index in unlinked mode.
    mNodeIndex: u32,
    /// Following is ignored if pDesc != NULL.  pDesc->mFlags will be considered instead.
    mCreationFlag: TextureCreationFlags,
    /// The texture file format (dds/ktx/...)
    mContainer: TextureContainerType,

    pub const __Union0 = extern union {
        __struct_field1: __Struct0,
        /// Ycbcr sampler to use when loading ycbcr texture from file
        pYcbcrSampler: [*c]Sampler,

        /// Load empty texture
        pub const __Struct0 = extern struct {
            pDesc: [*c]TextureDesc,
            /// MemZero texture
            mForceReset: bool,
        };
    };
};

pub const BufferChunk = extern struct {
    mOffset: u32,
    mSize: u32,
};

/// Structure used to sub-allocate chunks on a buffer, keeps track of free memory to handle new requests.
/// Interface to add/remove this allocator is currently private, could be made public if needed.
pub const BufferChunkAllocator = extern struct {
    pBuffer: [*c]Buffer,
    mUsedChunkCount: u32,
    mSize: u32,
    mUnusedChunks: [*c]BufferChunk,
};

/// Structure used to sub-allocate chunks on a buffer, keeps track of free memory to handle new requests.
/// Interface to add/remove this allocator is currently private, could be made public if needed.
/// Stores huge buffers that are then used to sub-allocate memory for each of the loaded meshes.
/// GeometryBuffer can be provided to GeometryLoadDesc::pGeometryBuffer when loading a mesh, sub-chunks will be allocated
/// by mIndex and mVertex allocators and return the BufferChunk(s) that where used in Geometry::mIndexBufferChunk and
/// Geometry::mVertexBufferChunks
pub const GeometryBuffer = extern struct {
    mIndex: BufferChunkAllocator,
    mVertex: [15]BufferChunkAllocator,
};

/// Stores huge buffers that are then used to sub-allocate memory for each of the loaded meshes.
/// GeometryBuffer can be provided to GeometryLoadDesc::pGeometryBuffer when loading a mesh, sub-chunks will be allocated
/// by mIndex and mVertex allocators and return the BufferChunk(s) that where used in Geometry::mIndexBufferChunk and
/// Geometry::mVertexBufferChunks
extern const _1_GEOMETRY_FILE_MAGIC_STR_: *const [10]u8;
pub const GEOMETRY_FILE_MAGIC_STR = _1_GEOMETRY_FILE_MAGIC_STR_;

pub const Meshlet = extern struct {
    /// Offsets within meshlet_vertices and meshlet_triangles arrays with meshlet data
    vertexOffset: uint,
    triangleOffset: uint,
    /// Number of vertices and triangles used in the meshlet; data is stored in consecutive range defined by offset and count
    vertexCount: uint,
    triangleCount: uint,
};

pub const MeshletData = extern struct {
    center: float3,
    radius: f32,
    /// Normal cone, useful for backface culling
    coneApex: float3,
    coneAxis: float3,
    /// = cos(angle/2)
    coneCutoff: f32,
};

pub const GeometryMeshlets = extern struct {
    mMeshletCount: u64,
    mMeshlets: [*c]Meshlet,
    mMeshletsData: [*c]MeshletData,
    mVertexCount: u64,
    mVertices: [*c]u32,
    mTriangleCount: u64,
    mTriangles: [*c]u8,
};

pub const Geometry = extern struct {
    __union_field1: __Union0,
    /// The array of traditional draw arguments to draw each subset in this geometry
    pDrawArgs: [*c]IndirectDrawIndexArguments,
    /// The array of vertex buffer strides to bind when drawing this geometry
    mVertexStrides: [15]u32,
    bitfield_1: packed struct(u32) {
        // NOTE: Bitfield generation not guaranteed to work on all platforms, use with caution.

        /// Number of vertex buffers in this geometry
        mVertexBufferCount: u8, // 8 bits
        /// Index type (32 or 16 bit)
        mIndexType: u2, // 10 bits
        /// Number of draw args in the geometry
        mDrawArgCount: u22, // 32 bits
    },

    /// Number of indices in the geometry
    mIndexCount: u32,
    /// Number of vertices in the geometry
    mVertexCount: u32,
    /// If present, data is stored in pGeometryBuffer
    pGeometryBuffer: [*c]GeometryBuffer,
    meshlets: GeometryMeshlets,
    // TIDES: BEGIN MANUAL CHANGES
    mAabbMin: [3]f32,
    mAabbMax: [3]f32,
    mAabbCenter: [3]f32,
    mRadius: f32,
    mPad: [10]u32,
    // TIDES: END MANUAL CHANGES

    pub const __Union0 = extern union {
        __struct_field1: __Struct0,
        __struct_field3: __Struct2,

        pub const __Struct0 = extern struct {
            /// Index buffer to bind when drawing this geometry
            pIndexBuffer: [*c]Buffer,
            /// The array of vertex buffers to bind when drawing this geometry
            pVertexBuffers: [15][*c]Buffer,
        };

        pub const __Struct2 = extern struct {
            /// Used when Geometry is loaded to unified GeometryBuffer object (when GeometryLoadDesc::pGeometryBuffer is valid)
            mIndexBufferChunk: BufferChunk,
            mVertexBufferChunks: [15]BufferChunk,
        };
    };
};

/// Outputs data that's only needed in the CPU side, OTOH the Geometry object holds GPU related information and buffers
pub const GeometryData = extern struct {
    /// Shadow copy of the geometry vertex and index data if requested through the load flags
    pShadow: [*c]ShadowData,
    /// The array of joint inverse bind-pose matrices ( object-space )
    pInverseBindPoses: *mat4,
    /// The array of data to remap skin batch local joint ids to global joint ids
    pJointRemaps: [*c]u32,
    /// Number of joints in the skinned geometry
    mJointCount: u32,
    /// Hair data
    mHair: Hair,
    mPad0: [1]u32,
    meshlets: [*c]MeshletData,
    /// Custom data imported by the user in custom AssetPipelines, this can be data that was exported from a custom tool/plugin
    /// specific to the engine/game. See AssetPipeline: callbacks in ProcessGLTFParams for more information.
    pUserData: ?*anyopaque,
    mUserDataSize: u32,
    mPad1: [5]u32,

    pub const Hair = extern struct {
        mVertexCountPerStrand: u32,
        mGuideCountPerStrand: u32,
    };

    pub const ShadowData = extern struct {
        pIndices: ?*anyopaque,
        pAttributes: [19]?*anyopaque,
        /// Strides for the data in pAttributes, this might not match Geometry::mVertexStrides since those are generated based on
        /// GeometryLoadDesc::pVertexLayout, e.g. if the normals are packed on the GPU as half2 then:
        ///         - Geometry::mVertexStrides will be sizeof(half2)
        ///         - ShadowData::mVertexStrides might be sizeof(float3) = 12 (or maybe sizeof(float4) = 16)
        /// If the data readed from the file in pAttributes is already packed then ShadowData::mVertexStrides[i] ==
        /// Geometry::mVertexStrides[i]
        mVertexStrides: [19]u32,
        /// We might have a different number of attributes than mVertexCount.
        /// This happens for example for Hair
        mAttributeCount: [19]u32,
    };
};

/// Outputs data that's only needed in the CPU side, OTOH the Geometry object holds GPU related information and buffers
pub const GeometryLoadFlags = extern struct {
    bits: c_int = 0,

    pub const GEOMETRY_LOAD_FLAG_NONE: GeometryLoadFlags = .{ .bits = @as(c_uint, @intCast(0)) };
    /// Keep shadow copy of indices and vertices for CPU
    pub const GEOMETRY_LOAD_FLAG_SHADOWED: GeometryLoadFlags = .{ .bits = @as(c_uint, @intCast(1)) };
    /// Use structured buffers instead of raw buffers
    pub const GEOMETRY_LOAD_FLAG_STRUCTURED_BUFFERS: GeometryLoadFlags = .{ .bits = @as(c_uint, @intCast(2)) };
    /// Geometry buffers can be used as input for ray tracing
    pub const GEOMETRY_LOAD_FLAG_RAYTRACING_INPUT: GeometryLoadFlags = .{ .bits = @as(c_uint, @intCast(4)) };

    // pub usingnamespace cpp.FlagsMixin(GeometryLoadFlags);
};

pub const GeometryBufferLoadDesc = extern struct {
    mStartState: ResourceState,
    pNameIndexBuffer: [*c]const u8,
    pNamesVertexBuffers: [15][*c]const u8,
    mIndicesSize: u32,
    mVerticesSizes: [15]u32,
    pIndicesPlacement: [*c]ResourcePlacement,
    pVerticesPlacements: [15][*c]ResourcePlacement,
    pOutGeometryBuffer: [*c][*c]GeometryBuffer,
};

pub const GeometryBufferLayoutDesc = extern struct {
    mIndexType: IndexType,
    mVerticesStrides: [15]u32,
    /// Vertex buffer/binding idx for each semantic.
    /// Used to locate attributes inside specific buffers for loaded Geometry.
    mSemanticBindings: [19]u32,
};
